syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "api/user/v1;v1";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    security_definitions: {
        security: {
        key: "bearer"
        value: {
            type: TYPE_API_KEY
            in: IN_HEADER
            name: "Authorization"
            description: "需要AuthToken: Bearer <token>"
        }
        }
    }
    security: {
        security_requirement: {
        key: "bearer"
        }
    }
};
  
message GetAvatarReply {
    optional string avatar = 1;
}

message User {
    string token = 1;
    string id = 2;
    string nickname = 3;
    optional string avatar = 4;
}

service ProfileService {
    rpc GetAvatar(google.protobuf.Empty) returns (GetAvatarReply) {
        option (google.api.http) = {
            get: "/user/v1/profile/avatar"
        };
    }
}
